fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 ::-webkit-scrollbar {
   width: 0.5rem;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
